fixed styling so overflow text will wrap in cards

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -9,7 +9,6 @@
     border-radius: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     list-style-type: none;
-    
 }
 
 .likes-count {
@@ -17,6 +16,12 @@
     display: flex;
     justify-content: center;
 }
+
+.message {
+    inline-size: 130px;
+    overflow-wrap: break-word;
+}
+
 p {
     font-size: 1.4rem;
 }
